Unreleased
==========

Changed
-------

* The include and code tags now only return a dictionary for the return variable
  instead of wrapping the dictionary into an attribute wrapper.  This way there
  is no ambiguity if an accessed attribute exists which would prevent __getattr__
  being called to retrieve the value.

    {% include "..." ; return result %}
    {{ result["update"] }}

* Expand now allows expanding into any specific compartment:

    {% expand expr ; into global %}

  Supported values are "local", "global", "private", and "return". If no value
  is specified, it defaults to local.

* Return variables are now accessible just like any other variable compartment.
  They must be prefixed with "r@" to be accessed, and can be set, retrieved,
  and cleared.

* Overhauled how variables are accessed.  Originally, global variables were
  just local variables set in the upper-most scope.  Since access to a variable
  would walk up the scope, any variable set in the upper-most scope without a
  variable of the same name set anywhere lower would be visible.

  This change divides variables into three compartments.

  Local variables are set in a template's render state, and each time another
  template is included, the local variables are copied into the included
  templates' variables. The included template has access to those variables and
  can change them in its own context, but upon return the local variables in the
  including template are restored.  Technically what happens is when a template
  is include, a copy of the local variables is saved into a stack, and when that
  template is finished, the local variables are restored.  A template can set
  local variables knowing that nested templates will see those variable unless
  they are unset and that the value of the local variable in the current
  template is not affected by changes in nested templates.

  Private variables are private to each included template. Whenever a template