@@ -1,13 +1,13 @@
 {% autostrip %}
 
-{% for i in [1, 2, 3, 4, 5] %}
+{% foreach i in [1, 2, 3, 4, 5] %}
 {{ i }}
 {% if i == 3 %}
 {% break %}
 {% endif %}
 {% endfor +%}
 
-{% for i in [1, 2, 3, 4, 5] %}
+{% foreach i in [1, 2, 3, 4, 5] %}
 {% if i == 3 %}
 {% continue %}
 {% endif %}
