@@ -3,4 +3,4 @@
 {{ v2 }}
 About to include.
 {% include "include_1.inc" ; with v2 = "Value 3" %}
-{% for var in ["include_1.inc"] %}{% include var %}{% endfor %}
+{% foreach var in ["include_1.inc"] %}{% include var %}{% endfor %}
