@@ -1,3 +1,3 @@
-{% for item in ["One", "Two", "Three"] %}
+{% foreach item in ["One", "Two", "Three"] %}
 {{ item }}
 {% endfor %}
