@@ -1,3 +1,3 @@
-{% for item in [["Bob", 22],["Susan",33]] %}
-{% for i in item %}{{ i }}{% endfor %}
+{% foreach item in [["Bob", 22],["Susan",33]] %}
+{% foreach i in item %}{{ i }}{% endfor %}
 {% endfor %}
