@@ -1,3 +1,3 @@
-{% for day in weekdays %}
+{% foreach day in weekdays %}
 {{- day -}}
 {% endfor %}
