@@ -1,11 +1,11 @@
 {% autostrip %}
-{% for day in weekdays %}
+{% foreach day in weekdays %}
 {{ day +}}
 {% else %}
 Nothing Here.
 {% endfor %}
 
-{% for items in [] %}
+{% foreach items in [] %}
 {{ item }}
 {% else %}
 No Items
