@@ -1,6 +1,6 @@
 This file tests sections
 
-{% for name in ["sec1", "sec2", "sec3"] %}
+{% foreach name in ["sec1", "sec2", "sec3"] %}
 {% section name %}
 This is section {{ name }}
 {% endsection %}
